--- a/src/index.css
+++ b/src/index.css
@@ -198,5 +198,12 @@
   font-style: normal;
 }
 
+.font-edu {
+  font-family: "Edu NSW ACT Cursive", cursive;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
 
 
