--- a/src/index.css
+++ b/src/index.css
@@ -205,5 +205,20 @@
   font-style: normal;
 }
 
+.font-satisfy {
+  font-family: "Satisfy", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+.font-cormorant {
+  font-family: "Cormorant Garamond", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 
 
